# kauri

./: .gitignore  .readthedocs.yaml  README.md  display.py  example.ipynb  maps.py  odd_even_decomp.ipynb  pyproject.toml  requirements.txt  setup.py  trees.py  unit_tests.py
.github/workflows/: publish.yml  tests.yml
docs/: conf.py  docs.html  index.rst  kauri.rst  kauri_sphinx.py  modules.rst  refs.bib  refs.rst  requirements.in  requirements.txt  rootedtrees.rst
docs/_static/: custom.css  logo.psd  logo_dark.psd  logo_light.psd
docs/pages/: analysis.rst  bck.rst  bseries.rst  cem.rst  cf.rst  display.rst  fundamentals.rst  getting_started.rst  gl.rst  hopf_algebras.rst  manifold_ees.rst  maps.rst  mkw.rst  nck.rst  non_planar.rst  oddeven.rst  pbck.rst  pgl.rst  planar.rst  planar_oddeven.rst  rk.rst  tree_generation.rst  tree_objects.rst
docs/pages/non_planar/: bck.rst  bseries.rst  cem.rst  maps.rst  rk.rst  tree_generation.rst  tree_objects.rst
docs/pages/non_planar/tree_objects/: forest.rst  tree.rst  (+2 more)
docs/pages/planar/: tree_objects.rst
docs/pages/tree_objects/: forest.rst  forestsum.rst  tensor.rst  tree.rst
examples/: bseries.ipynb  example.ipynb  generate_trees.ipynb  rk_example.ipynb
examples/ees_schemes/: README.md  ees25.nb  ees25_mathematica_code.txt  ees27.nb  ees27_mathematica_code.txt  galactic_orbit.ipynb  gen_order_conds.ipynb  inverse_square_attraction.ipynb  mathematica_order_conds.ipynb  order_conds_complexity.ipynb  parameter_selection.ipynb  stability.ipynb  stability_polynomials.ipynb  symmetric_decomp_euler.ipynb  tree_tables.ipynb
examples/hopf_algebras/: bck.ipynb  cem.ipynb  gl.ipynb  mkw.ipynb  nck.ipynb  pgl.ipynb
kauri/: __init__.py  _protocols.py  abstract_tree.py  bseries.py  cf.py  cf_methods.py  display.py  generic_algebra.py  gentrees.py  lb_substitution.py  manifold_ees.py  maps.py  oddeven.py  planar_oddeven.py  ptrees.py  rk.py  rk_methods.py  tensor_product.py  trees.py  utils.py
kauri/bck/: __init__.py  bck.py
kauri/bck_impl/: __init__.py  bck_impl.py
kauri/cem/: __init__.py  cem.py
kauri/cem_impl/: __init__.py  cem_impl.py
kauri/gl/: __init__.py  gl.py
kauri/mkw/: __init__.py  mkw.py
kauri/nck/: __init__.py  nck.py
kauri/pbck/: __init__.py  pbck.py
kauri/pgl/: __init__.py  pgl.py
kauri/planar_trees/: __init__.py  mkw_ees_spec.py  mkw_truncated.py  planar_basis.py
rootedtrees/: __init__.py  display.py  gentrees.py  maps.py  rk.py  trees.py  utils.py
unit_tests/: test_bck.py  test_bseries.py  test_cem.py  test_cf_methods.py  test_colored_gentrees.py  test_gl.py  test_hopf_axioms.py  test_labelled_bck.py  test_labelled_tree.py  test_manifold_ees.py  test_map.py  test_mkw.py  test_mkw_arbitrary_composition.py  test_mkw_forest_coproduct_reference.py  test_nck.py  test_oddeven.py  test_pbck.py  test_pgl.py  test_planar_arithmetic.py  test_planar_oddeven.py  test_planar_trees.py  test_ptree.py  test_reused_stage_cf_method.py  test_rk.py  test_tensor_product.py  test_trees.py
(+3 files in other folders)
